--- a/single-repo.html
+++ b/single-repo.html
@@ -22,9 +22,14 @@
   </header>
   
   <main>
-  
-  </main>
+    <dvi id="issues-container" class="list-group">
 
+      <div id="limit-warning">
+
+      </div>
+    </dvi>
+  </main>
+<script src="./assets/js/single.js"></script>
 </body>
 
 </html>
